styles/home.module.css
.main {
  padding: 20px 20px 60px;
  max-width: 680px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
}

.hr {
  border: none;
  border-bottom: 1px solid #efefef;
  margin: 3em auto;
}

.boardRow {
  display: flex;
  position: relative;
}

.square {
  width: 100px;
  height: 100px;
  background-color: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 24px;
  cursor: pointer;
  transition: background-color 0.3s, transform 0.3s;
  animation: squareAnimation 1s infinite;
  border: none;
}

.square:hover {
  background-color: #ddd;
  transform: scale(1.1);
}

.x {
  color: blue;
}

.o {
  color: red;
}

.status {
  margin-bottom: 20px;
  font-size: 24px;
}

.frostedGlass {
  background: rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(5px);
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
}

.resetButton {
  background: none;
  border: none;
  font-size: 24px;
  cursor: pointer;
  padding: 10px;
  border-radius: 10px;
  transition: background-color 0.3s, color 0.3s;
  animation: resetButtonAnimation 3s infinite;
}

.resetButton:disabled {
  background-color: #ccc;
  color: #999;
  cursor: not-allowed;
}

.resetButton.red {
  background-color: red;
  color: white;
}

/* Dark and light mode switcher styles */
.modeSwitcher {
  position: fixed;
  top: 20px;
  right: 20px;
  width: 50px;
  height: 50px;
  background: rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(5px);
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: all 0.3s ease;
}

.modeSwitcher.darkMode {
  background: rgba(0, 0, 0, 0.5);
}

.modeSwitcher .icon {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background-color: #000; /* black circle for light mode */
  transition: all 0.3s ease;
}

.modeSwitcher.darkMode .icon {
  background-color: #fff; /* white circle for dark mode */
}

/* Switcher animation */
@keyframes switcherAnimation {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

.modeSwitcher {
  animation: switcherAnimation 1s infinite;
}

.grid {
  position: relative;
  width: 320px;
  height: 320px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
}

.gridLine {
  position: absolute;
  background-color: #000;
}

.gridLine.horizontal {
  width: 100%;
  height: 2px;
}

.gridLine.vertical {
  width: 2px;
  height: 100%;
}

.gridLine.horizontal:nth-child(1) {
  top: 33.33%;
}

.gridLine.horizontal:nth-child(2) {
  top: 66.66%;
}

.gridLine.vertical:nth-child(3) {
  left: 33.33%;
}

.gridLine.vertical:nth-child(4) {
  left: 66.66%;
}

